Sat May  8 22:50:55 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_set_translation_domain): 
	Add a note regarding UTF-8 requirements, proposed by 
	Mariano Suárez-Alvarez.

Sat May  8 22:43:11 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktearoffmenuitem.h: 
	* gtk/gtktearoffmenuitem.c: Put the torn_off flag back
	into the GtkTearoffMenuItem struct, since it is used
	by the Gimp, and keep it synchronized with the 
	tearoff_state property of the parent menu.

2004-05-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkbutton.c (gtk_button_size_allocate): Don't let the child
	draw over the focus rectangle.

	* gtk/gtkhsv.c: Draw focus indication in the color wheel using
	standard focus style.  (#63071, Bill Haneman, idea for new
	style by Owen Taylor)

	* gtk/gtkstyle.c (gtk_default_draw_focus): Support drawing on
	focus on the colorwheel via details.

2004-05-06  Matthias Clasen  <mclasen@redhat.com>

        Merge from 2.4:
	
	* gtk/gtkcombobox.c (gtk_combo_box_menu_state_changed): Remove
	this no longer needed signal handler.  (#141817, Paul Pogonyshev)

Fri May  7 00:41:46 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktearoffmenuitem.h: 
	* gtk/gtktearoffmenuitem.c: Make the tearoff 
	functionality model/view, the tearoffmenuitem being
	the view and the tearoff_state property of the menu
	being the model.  (#101185, Owen Taylor)

	* gtk/gtkmenu.c: Add a tearoff_state property.

Thu May  6 23:52:13 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from 2.4:

	* gtk/gtkmenuitem.c (gtk_menu_item_select_timeout): Also 
	popup the submenu for items in torn off menus.  (#122051)

2004-05-06  Sven Neumann  <sven@gimp.org>

	* gtk/gtkexpander.c (gtk_expander_size_allocate): in RTL mode,
	position the title lable next to the arrow just as we do for LTR
	rendering. Fixes bug #141825.

2004-05-06  Matthias Clasen  <mclasen@redhat.com>

	* docs/RELEASE-HOWTO: Document the new policy of
	bumping version numbers after release.
